# cross_traffic_manager_cpp

./: CMakeLists.txt  README.md  package.xml
config/crossing_points/: test.yaml  tukuba2024.yaml
src/: README.md  traffic_judgementer_cpp.cpp  traffic_observer_cpp.cpp
